Completed Implementing View

--- a/Acme.ProductManagement/index.html
+++ b/Acme.ProductManagement/index.html
@@ -5,36 +5,45 @@
     <meta charset="utf-8" />
 
     <link href="Content/bootstrap.css" rel="stylesheet" />
+    <script src="app/app.js"></script>
 </head>
 <body ng-app="productManagement" ng-controller="ProductListController as vm">
-    <table>
-        <thead>
-            <tr>
-                <td>Image</td>
-                <td>Product</td>
-                <td>Code</td>
-                <td>Available</td>
-                <td>Price</td>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="product in vm.products">
-                <td><img style="width:50px;margin:2px;" ng-src="{{product.imageUrl}}" title="{{product.productName}}" /></td>
-                <td>{{product.productName}}</td>
-                <td>{{product.productCode}}</td>
-                <td>{{product.releaseDate}}</td>
-                <td>{{product.price | currency}}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="panel panel-primary">
+        <div class="panel-heading" style="font-size:large">
+            Product List
+        </div>
 
+        <div class="panel-body">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <td class="btn btn-default" ng-click="vm.toggleImage()">{{vm.showImage ? "Hide Image" : "Show Image"}}</td>
+                        <td>Product</td>
+                        <td>Code</td>
+                        <td>Available</td>
+                        <td>Price</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="product in vm.products">
+                        <td><img ng-if="vm.showImage" style="width: 50px; margin: 2px;" ng-src="{{product.imageUrl}}" title="{{product.productName}}" /></td>
+                        <td>{{product.productName}}</td>
+                        <td>{{product.productCode}}</td>
+                        <td>{{product.releaseDate}}</td>
+                        <td>{{product.price | currency}}</td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </div>
+    </div>
+    
 
 
     <!--Library-->
     <script src="Scripts/angular.js"></script>
     <script src="app/app.js"></script>
-<!--Services-->
-
+    <!--Services-->
     <!--Controllers-->
     <script src="app/products/productListController.js"></script>
 
