Created a service which encapsulate $resource

--- a/Acme.ProductManagement/index.html
+++ b/Acme.ProductManagement/index.html
@@ -37,13 +37,16 @@
 
         </div>
     </div>
-    
+
 
 
     <!--Library-->
     <script src="Scripts/angular.js"></script>
+    <script src="Scripts/angular-resource.js"></script>
     <script src="app/app.js"></script>
     <!--Services-->
+    <script src="app/common/services/common.services.js"></script>
+    <script src="app/common/services/productResource.js"></script>
     <!--Controllers-->
     <script src="app/products/productListController.js"></script>
 
