--- a/Acme.ProductManagement/index.html
+++ b/Acme.ProductManagement/index.html
@@ -8,6 +8,34 @@
     <link href="Content/app.css" rel="stylesheet" />
 </head>
 <body ng-app="productManagement">
+    <nav class="navbar navbar-inverse">
+        <div class="container">
+            <a class="navbar-brand"
+               ui-sref="home">Acme Product Management</a>
+            <div class="navbar-header">
+                <button type="button"
+                        class="navbar-toggle"
+                        data-toggle="collapse"
+                        data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a ui-sref="productList">Product List</a></li>
+                    <li>
+                        <a ui-sref="productEdit({productId:0})">
+                            <i class="glyphicon glyphicon-plus"></i>
+                            Add Product
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container">
         <!--this is where ui will be injected by the router-->
         <div ui-view></div>
