Added a new welcome page

--- a/Acme.ProductManagement/index.html
+++ b/Acme.ProductManagement/index.html
@@ -40,6 +40,10 @@
         <!--this is where ui will be injected by the router-->
         <div ui-view></div>
     </div>
+    <!--Generic Scripts-->
+    <script src="Scripts/jquery-1.9.1.js"></script>
+    <script src="Scripts/bootstrap.js"></script>
+
     <!--Library-->
     <script src="Scripts/angular.js"></script>
     <script src="Scripts/angular-resource.js"></script>
