--- a/Acme.ProductManagement/index.html
+++ b/Acme.ProductManagement/index.html
@@ -27,7 +27,7 @@
                 <ul class="nav navbar-nav">
                     <li><a ui-sref="productList">Product List</a></li>
                     <li>
-                        <a ui-sref="productEdit({productId:0})">
+                        <a ui-sref="productEdit">
                             <i class="glyphicon glyphicon-plus"></i>
                             Add Product
                         </a>
@@ -56,6 +56,6 @@
     <script src="app/common/services/productResourceMock.js"></script>
     <!--Controllers-->
     <script src="app/products/productListController.js"></script>
-
+    <script src="app/products/productDetailController.js"></script>
 </body>
 </html>
