--- a/Acme.ProductManagement/app/welcomeView.html
+++ b/Acme.ProductManagement/app/welcomeView.html
@@ -2,11 +2,11 @@
     <div class="panel-heading" style="font-size:x-large">
         Acme Product Management
     </div>
-    <img src="images/logo.jpg" style="width:400px;margin:20px" />
+    <img src="/images/logo.jpg" style="width:400px;margin:20px" />
 
     <div class="panel-body">
         <div class="col-md-offset-3 col-md-3">
-            <div>Developed by:</div>
+            <strong>Developed by:</strong>
             <a href="http://theguru.azurewebsites.net/">Vaibhav Bali</a>
         </div>
     </div>
