Added Edit button and  product detail

--- a/Acme.ProductManagement/app/products/productDetailView.html
+++ b/Acme.ProductManagement/app/products/productDetailView.html
@@ -5,44 +5,43 @@
 
     <div class="panel-body">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-xs-8">
                 <div class="row">
-                    <div class="col-md-2">Name:</div>
-                    <div class="col-md-6">{{vm.product.productName}}</div>
+                    <div class="col-xs-2">Name:</div>
+                    <div class="col-xs-10">{{vm.product.productName}}</div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2">Code:</div>
-                    <div class="col-md-6">{{vm.product.productCode }}</div>
+                    <div class="col-xs-2">Code:</div>
+                    <div class="col-xs-10">{{vm.product.productCode }}</div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2">Description:</div>
-                    <div class="col-md-6">{{vm.product.description }}</div>
+                    <div class="col-xs-2">Description:</div>
+                    <div class="col-xs-10">{{vm.product.description }}</div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2">Availability:</div>
-                    <div class="col-md-6">{{vm.product.releaseDate|date }}</div>
+                    <div class="col-xs-2">Availability:</div>
+                    <div class="col-xs-10">{{vm.product.releaseDate|date }}</div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2">Cost:</div>
-                    <div class="col-md-6">{{vm.product.cost|currency }}</div>
+                    <div class="col-xs-2">Cost:</div>
+                    <div class="col-xs-10">{{vm.product.cost|currency }}</div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2">Price:</div>
-                    <div class="col-md-6">{{ vm.product.price|currency }}</div>
+                    <div class="col-xs-2">Price:</div>
+                    <div class="col-xs-10">{{ vm.product.price|currency }}</div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2">Margin:</div>
-                    <div class="col-md-6">{{ vm.marginPercent | number:0}}%</div>
+                    <div class="col-xs-2">Margin:</div>
+                    <div class="col-xs-10">{{ vm.marginPercent | number:0}}%</div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2">Tags:</div>
-                    <div class="col-md-6">{{vm.product.tagList}}</div>
+                    <div class="col-xs-2">Tags:</div>
+                    <div class="col-xs-10">{{vm.product.tagList}}</div>
                 </div>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-xs-4 pull-right">
                 <img class="center-block img-responsive"
-                     style="width:200px;margin:2px;"
                      ng-src="{{vm.product.imageUrl}}"
                      title="{{vm.product.productName}}">
             </div>
