--- a/Acme.ProductManagement/app/products/productListView.html
+++ b/Acme.ProductManagement/app/products/productListView.html
@@ -18,10 +18,20 @@
             <tbody>
                 <tr ng-repeat="product in vm.products">
                     <td><img class="center-block img-responsive" ng-if="vm.showImage" style="width: 50px; margin: 2px;" ng-src="{{product.imageUrl}}" title="{{product.productName}}" /></td>
-                    <td>{{product.productName}}</td>
+                    <td>
+                        <a ui-sref="productDetail({productId: product.productId})">
+                            {{product.productName}}
+                        </a>
+                    </td>
                     <td>{{product.productCode}}</td>
                     <td>{{product.releaseDate}}</td>
                     <td>{{product.price | currency}}</td>
+                    <td>
+                        <a class="btn btn-primary"
+                           ui-sref="productEdit({productId: product.productId})">
+                            Edit
+                        </a>
+                    </td>
                 </tr>
             </tbody>
         </table>
