Created productEditController and updated css

--- a/Acme.ProductManagement/index.html
+++ b/Acme.ProductManagement/index.html
@@ -57,5 +57,6 @@
     <!--Controllers-->
     <script src="app/products/productListController.js"></script>
     <script src="app/products/productDetailController.js"></script>
+    <script src="app/products/productEditController.js"></script>
 </body>
 </html>
