changed from intantiating productEdit to productEditInfo as productId state is now abstract

--- a/Acme.ProductManagement/app/products/productListView.html
+++ b/Acme.ProductManagement/app/products/productListView.html
@@ -28,7 +28,7 @@
                     <td>{{product.price | currency}}</td>
                     <td>
                         <a class="btn btn-primary"
-                           ui-sref="productEdit({productId: product.productId})">
+                           ui-sref="productEdit.info({productId: product.productId})">
                             Edit
                         </a>
                     </td>
