--- a/Acme.ProductManagement/index.html
+++ b/Acme.ProductManagement/index.html
@@ -27,7 +27,7 @@
                 <ul class="nav navbar-nav">
                     <li><a ui-sref="productList">Product List</a></li>
                     <li>
-                        <a ui-sref="productEdit">
+                        <a ui-sref="productEdit.info({productId:0})">
                             <i class="glyphicon glyphicon-plus"></i>
                             Add Product
                         </a>
