Updated productEditInfo html

--- a/Acme.ProductManagement/app/products/productDetailView.html
+++ b/Acme.ProductManagement/app/products/productDetailView.html
@@ -55,7 +55,7 @@
             Back
         </a>
         <a class="btn btn-primary"
-           ui-sref="productEdit({productId: vm.product.productId})"
+           ui-sref="productEdit.info({productId: vm.product.productId})"
            style="width:80px;margin-left:10px">
             Edit
         </a>
