--- a/Acme.ProductManagement/app/products/productEditInfoView.html
+++ b/Acme.ProductManagement/app/products/productEditInfoView.html
@@ -1,15 +1,28 @@
-<form name="productForm">
+<form class="form-horizontal" name="productForm">
     <fieldset>
         <legend>Basic Product Information</legend>
-
-        <div>
-            <label for="inputProductName">Product Name</label>
-            <input ng-model="vm.product.productName" id="inputProductName" type="text" placeholder="Product Name"/>
+        <div class="form-group">
+            <label class="col-sm-2 control-label"
+                   for="inputProductName">Product Name</label>
+            <div class="col-sm-4">
+                <input class="form-control"
+                       id="inputProductName"
+                       type="text"
+                       placeholder="Product Name"
+                       ng-model="vm.product.productName" />
+            </div>
         </div>
 
-        <div>
-            <label for="inputDescription">Description</label>
-            <textarea ng-model="vm.product.description" rows="3" id="inputDescription" placeholder="Description"></textarea> 
+        <div class="form-group">
+            <label class="col-sm-2 control-label"
+                   for="inputDescription">Description</label>
+            <div class="col-sm-10">
+                <textarea class="form-control"
+                          id="inputDescription"
+                          placeholder="Description"
+                          rows="3"
+                          ng-model="vm.product.description"></textarea>
+            </div>
         </div>
     </fieldset>
 </form>
