--- a/Acme.ProductManagement/app/products/productEditInfoView.html
+++ b/Acme.ProductManagement/app/products/productEditInfoView.html
@@ -9,14 +9,25 @@
                        id="inputProductName"
                        type="text"
                        placeholder="Product Name"
-                       ng-model="vm.product.productName" />
+                       ng-model="vm.product.productName"/>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label" for="inputProductCode">Product Code</label>
+            <div class="col-sm-4">
+                <input class="form-control"
+                       id="inputProductCode"
+                       ui-mask="AAA-****"
+                       placeholder="AAA-1234"
+                       ng-model="vm.product.productCode">
             </div>
         </div>
 
         <div class="form-group">
             <label class="col-sm-2 control-label"
                    for="inputDescription">Description</label>
-            <div class="col-sm-10">
+            <div class="col-sm-4">
                 <textarea class="form-control"
                           id="inputDescription"
                           placeholder="Description"
