--- a/Acme.ProductManagement/index.html
+++ b/Acme.ProductManagement/index.html
@@ -49,6 +49,7 @@
     <script src="Scripts/angular-resource.js"></script>
     <script src="Scripts/angular-mocks.js"></script>
     <script src="Scripts/AngularUI/ui-router.js"></script>
+    <script src="Scripts/angular-ui/ui-utils.js"></script>
     <script src="app/app.js"></script>
     <!--Services-->
     <script src="app/common/services/common.services.js"></script>
