--- a/Acme.ProductManagement/app/products/productEditInfoView.html
+++ b/Acme.ProductManagement/app/products/productEditInfoView.html
@@ -26,6 +26,28 @@
 
         <div class="form-group">
             <label class="col-sm-2 control-label"
+                   for="inputAvailabilityDate">Availability</label>
+            <div class="col-sm-4">
+                <div class="input-group">
+                    <input class="form-control"
+                           id="inputAvailabilityDate"
+                           type="text"
+                           datepicker-popup="MMM dd, yyyy "
+                           is-open="vm.opened"
+                           ng-model="vm.product.releaseDate" />
+                    <span class="input-group-btn">
+                        <button class="btn btn-default"
+                                ng-click="vm.open($event)">
+                            <i class="glyphicon glyphicon-calendar"></i>
+                        </button>
+                    </span>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label"
                    for="inputDescription">Description</label>
             <div class="col-sm-4">
                 <textarea class="form-control"
