--- a/Acme.ProductManagement/index.html
+++ b/Acme.ProductManagement/index.html
@@ -50,6 +50,7 @@
     <script src="Scripts/angular-mocks.js"></script>
     <script src="Scripts/AngularUI/ui-router.js"></script>
     <script src="Scripts/angular-ui/ui-utils.js"></script>
+    <script src="Scripts/angular-ui/ui-bootstrap-tpls.js"></script>
     <script src="app/app.js"></script>
     <!--Services-->
     <script src="app/common/services/common.services.js"></script>
