IMPORTANT implemented save functionality

--- a/Acme.ProductManagement/app/products/productEditInfoView.html
+++ b/Acme.ProductManagement/app/products/productEditInfoView.html
@@ -57,5 +57,24 @@
                           ng-model="vm.product.description"></textarea>
             </div>
         </div>
+
+        <div class="form-group">
+            <div class="col-md-4 col-md-offset-2">
+                <span>
+                    <button class="btn btn-primary"
+                            style="width:80px;margin-right:10px"
+                            ng-click="vm.submit()">
+                        Save
+                    </button>
+                </span>
+                <span>
+                    <button class="btn btn-default"
+                            style="width:70px"
+                            ng-click="vm.cancel()">
+                        Cancel
+                    </button>
+                </span>
+            </div>
+        </div>
     </fieldset>
 </form>
