Added a nested controller

--- a/Acme.ProductManagement/index.html
+++ b/Acme.ProductManagement/index.html
@@ -60,5 +60,6 @@
     <script src="app/products/productListController.js"></script>
     <script src="app/products/productDetailController.js"></script>
     <script src="app/products/productEditController.js"></script>
+    <script src="app/products/productEditTagController.js"></script>
 </body>
 </html>
