--- a/Acme.ProductManagement/index.html
+++ b/Acme.ProductManagement/index.html
@@ -1,10 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Acme Product Management</title>
     <meta charset="utf-8" />
 
     <link href="Content/bootstrap.css" rel="stylesheet" />
+    <link href="Content/toastr.css" rel="stylesheet" />
     <link href="Content/app.css" rel="stylesheet" />
 </head>
 <body ng-app="productManagement">
@@ -50,7 +51,8 @@
     <script src="Scripts/angular-mocks.js"></script>
     <script src="Scripts/AngularUI/ui-router.js"></script>
     <script src="Scripts/angular-ui/ui-utils.js"></script>
-    <script src="Scripts/angular-ui/ui-bootstrap-tpls.js"></script>
+<script src="Scripts/angular-ui/ui-bootstrap-tpls.js"></script>
+    <script src="Scripts/toastr.js"></script>
     <script src="app/app.js"></script>
     <!--Services-->
     <script src="app/common/services/common.services.js"></script>
