--- a/Acme.ProductManagement/app/products/productEditInfoView.html
+++ b/Acme.ProductManagement/app/products/productEditInfoView.html
@@ -1,23 +1,27 @@
-<form class="form-horizontal" name="productForm">
+<form class="form-horizontal" name="productForm" novalidate>
     <fieldset>
         <legend>Basic Product Information</legend>
-        <div class="form-group">
+        <div class="form-group" ng-class="{ 'has-error': productForm.inputProductName.$invalid}">
             <label class="col-sm-2 control-label"
                    for="inputProductName">Product Name</label>
             <div class="col-sm-4">
                 <input class="form-control"
+                       name="inputProductName"
                        id="inputProductName"
                        type="text"
-                       placeholder="Product Name"
+                       required
+                       placeholder="Product Name (required)"
                        ng-model="vm.product.productName"/>
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" ng-class="{'has-error': productForm.inputCode.$invalid}">
             <label class="col-sm-2 control-label" for="inputProductCode">Product Code</label>
             <div class="col-sm-4">
                 <input class="form-control"
                        id="inputProductCode"
+                       name="inputProductCode"
+                       required
                        ui-mask="AAA-****"
                        placeholder="AAA-1234"
                        ng-model="vm.product.productCode">
