--- a/Acme.ProductManagement/app/products/productEditInfoView.html
+++ b/Acme.ProductManagement/app/products/productEditInfoView.html
@@ -1,7 +1,8 @@
 <form class="form-horizontal" name="productForm" novalidate>
     <fieldset>
         <legend>Basic Product Information</legend>
-        <div class="form-group" ng-class="{ 'has-error': productForm.inputProductName.$invalid}">
+        <div class="form-group" ng-class="{ 'has-error': productForm.inputProductName.$invalid &&
+                                                        productForm.inputProductName.$dirty}">
             <label class="col-sm-2 control-label"
                    for="inputProductName">Product Name</label>
             <div class="col-sm-4">
@@ -10,8 +11,16 @@
                        id="inputProductName"
                        type="text"
                        required
+                       ng-minlength="4"
+                       ng-maxlength="12"
                        placeholder="Product Name (required)"
-                       ng-model="vm.product.productName"/>
+                       ng-model="vm.product.productName" />
+            </div>
+
+            <div class="help-block has-error" ng-messages="productForm.inputProductName.$error">
+                <div ng-message="required">Product name is required</div>
+                <div ng-message="minlength">Min length is 4 characters</div>
+                <div ng-message="maxlength">Max length is 12 characters</div>
             </div>
         </div>
 
@@ -26,6 +35,9 @@
                        placeholder="AAA-1234"
                        ng-model="vm.product.productCode">
             </div>
+            <span class="help-block has-error" ng-show="productForm.inputCode.$invalid">
+                Product code is required
+            </span>
         </div>
 
         <div class="form-group">
@@ -66,7 +78,8 @@
             <div class="col-md-4 col-md-offset-2">
                 <span>
                     <button class="btn btn-primary"
-                            style="width:80px;margin-right:10px"
+                            style="width: 80px; margin-right: 10px"
+                            ng-disabled="productForm.$invalid"
                             ng-click="vm.submit()">
                         Save
                     </button>
