Added AngularCharts and d3.js

--- a/Acme.ProductManagement/index.html
+++ b/Acme.ProductManagement/index.html
@@ -44,6 +44,7 @@
     <!--Generic Scripts-->
     <script src="Scripts/jquery-1.9.1.js"></script>
     <script src="Scripts/bootstrap.js"></script>
+    <script src="Scripts/d3.js"></script>
 
     <!--Library-->
     <script src="Scripts/angular.js"></script>
@@ -54,12 +55,15 @@
     <script src="Scripts/angular-ui/ui-utils.js"></script>
     <script src="Scripts/angular-ui/ui-bootstrap-tpls.js"></script>
     <script src="Scripts/toastr.js"></script>
+    <script src="Scripts/angular-charts.js"></script>
     <script src="app/app.js"></script>
+
     <!--Services-->
     <script src="app/common/services/common.services.js"></script>
     <script src="app/common/services/productResource.js"></script>
-<script src="app/common/services/productResourceMock.js"></script>
+    <script src="app/common/services/productResourceMock.js"></script>
     <script src="app/common/services/productService.js"></script>
+
     <!--Controllers-->
     <script src="app/products/productListController.js"></script>
     <script src="app/products/productDetailController.js"></script>
