Added a link for Price Analytics

--- a/Acme.ProductManagement/index.html
+++ b/Acme.ProductManagement/index.html
@@ -33,6 +33,9 @@
                             Add Product
                         </a>
                     </li>
+                    <li>
+                        <a ui-sref="priceAnalytics">Price Analytics</a>
+                    </li>
                 </ul>
             </div>
         </div>
