--- a/Acme.ProductManagement/index.html
+++ b/Acme.ProductManagement/index.html
@@ -58,7 +58,7 @@
     <script src="Scripts/angular-ui/ui-utils.js"></script>
     <script src="Scripts/angular-ui/ui-bootstrap-tpls.js"></script>
     <script src="Scripts/toastr.js"></script>
-    <script src="Scripts/angular-charts.js"></script>
+    <script src="Scripts/angular-charts.min.js"></script>
     <script src="app/app.js"></script>
 
     <!--Services-->
@@ -72,5 +72,8 @@
     <script src="app/products/productDetailController.js"></script>
     <script src="app/products/productEditController.js"></script>
     <script src="app/products/productEditTagController.js"></script>
+
+    <!--Price Controller-->
+    <script src="app/prices/priceAnalyticsController.js"></script>
 </body>
 </html>
